--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-image: 
+    background-image: url('../img/ombrebackground.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
