--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-image: url('../img/ombrebackground.jpg');
+    background-image: url('../public/img/ombrebackground.jpg')
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -12,15 +12,14 @@
 }
 
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: lightblue;
-    margin: 0;
-    padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
+    font-family: 'Garamond', serif;
+    margin: 0;
+    padding: 0;
 }
 
 .main {
@@ -28,12 +27,12 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    width: 100%;
     position: relative;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    height: 100vh;
+    width: 100%;
 }
 
 
@@ -43,22 +42,22 @@ body {
     align-items: center;
     justify-content: center;
     height: 85vh;
-    width: 80%;
-    border: 3px solid white;
+    width: 90%;
+    border: 3px solid rgb(227, 86, 178);
     z-index: 10;
 }
 
 .quote-text {
-    font-size: 2.5rem;
+    font-size: 2.0rem;
     text-align: center;
-    color: black;
-    margin: 20px 0;
-    font-style:italic;
+    color: rgb(18, 17, 18);
+    margin: 15px 0;
+    font-style: bold;
 }
 
 .author-text {
     font-size: 1.2rem;
-    color: black;
     text-align: center;
     margin-top: 10px;
+    color: black;
 }
