--- a/public/style.css
+++ b/public/style.css
@@ -4,11 +4,10 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-image: url('../public/img/ombrebackground.jpg')
+    background-image: url('../public/img/ombrebackground.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    z-index: -1;
 }
 
 body {
@@ -44,7 +43,6 @@ body {
     height: 85vh;
     width: 90%;
     border: 3px solid rgb(227, 86, 178);
-    z-index: 10;
 }
 
 .quote-text {
